Fixed text alignment over board tiles

--- a/src/renderer/monopoly.scss
+++ b/src/renderer/monopoly.scss
@@ -205,12 +205,6 @@ h1, h2, h3, h4, h5, h6 {
 		width: 80px;
 	}
 
-	.name,
-	.instructions {
-		padding-left: 15px;
-		padding-right: 15px;
-	}
-
 	.price {
 		font-size: 7px;
 		font-weight: 400;
